fixed modals not showing

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -18,8 +18,4 @@
     padding: 6px;
     font-weight: bold;
   }
-
-section#chakra-modal-4[style] {
-    opacity: 1;
-}
   
